# slime-mold

./: Cargo.toml  README.md
assets/shaders/: slime_mold.wgsl
src/: main.rs
src/slime_mold/: buffers.rs  compute.rs  mod.rs  texture.rs  ui.rs
